some cleanup, fixes.
git-svn-id: http://svn.l2jserver.com/trunk@4054 d34dfa0f-f91c-0410-86dd-cf06f19dd0ad